Remove subqueries and add some indexes to Simple Search